--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
             }
         </style>
     </head>
+
+
     <body>
         <!-- Header -->
         <header class="header">
@@ -141,7 +143,7 @@
                 <a class="header-links" href="">Gmail</a>
                 <a class="header-links" href="">Images</a>
                 <a class="header-links" href=""><span class="material-icons-outlined menu">apps</span></a>
-                <a class="signin" href=""><span>Sign In</span></a>
+                <a class="signin" href="">Sign In</a>
             </div>
         </header>
         <!-- Main: Logo -->
@@ -150,9 +152,9 @@
         </div>       
         <!-- Main: Searchbar & Buttons -->
         <div class="input-div">
-            <span class="material-icons-outlined menu" style="margin: 0 15px; font-size: 20px;">search</span>
+            <span class="material-icons-outlined" style="margin: 0 15px; font-size: 20px; color: #5f5f5f;">search</span>
             <input class ="input-text" type="text">
-            <span class="material-icons-outlined menu" style="margin: 0 15px;">mic</span>
+            <span class="material-icons-outlined" style="margin: 0 15px;color: #5f5f5f;">mic</span>
         </div>
         <div class="button-div">
             <button class="button">Google Search</button> 
